--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,7 @@
   </head>
   <body>
     <nav>
-      <a href="/">Home</a>
-      <a href="/blog/">Blog</a>
+      <a href="/">DL</a>
     </nav>
     <h1>DL</h1>
     <section>
